[package]
name = "leetcode_solutions"
version = "0.1.0"
edition = "2021"
default-run = "median_of_two_sorted_arrays"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "add_linked_list"
path = "src/add_linked_list.rs"

[[bin]]
name = "longest_substring"
path = "src/longest_substring.rs"

[[bin]]
name = "median_of_two_sorted_arrays"
path = "src/median_of_two_sorted_arrays.rs"

[[bin]]
name = "cherry_pickup_ii"
path = "src/cherry_pickup_ii.rs"
